# open5gs_freeDiameter

extensions/: CMakeLists.txt  meson.build
extensions/rt_pref/: CMakeLists.txt  rt_pref.c
include/freeDiameter/: libfdproto.h
libfdcore/: hooks.c  messages.c
libfdproto/: dispatch.c
